[package]
name = "rust_fm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2024"
description = "last.fm OAUTH and scrobbling"
license = "MIT"
repository = "https://github.com/hchap1/rust-fm"
readme = "README.md"
keywords = ["last.fm", "music", "scrobble"]

[lib]
name = "rust_fm"
path = "src/lib.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
md5 = "*"
reqwest = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dotenvy = "*"
open = "*"
axum = "*"
crossbeam = "*"
chrono = "*"
