[package]
name = "rust_fm"
version = "0.1.2"
authors = ["Harrison Chapman [hchap1@hotmail.com]"]
edition = "2024"
description = "last.fm OAUTH and scrobbling"
license = "MIT"
repository = "https://github.com/hchap1/rust-fm"
readme = "README.md"
keywords = ["fm", "music", "scrobble"]

[lib]
name = "rust_fm"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
crossbeam = "0.8.4"
dotenvy = "0.15.7"
md5 = "0.7.0"
open = "5.3.2"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
